--- a/src/aspnetrun-microservices/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/aspnetrun-microservices/Services/Catalog/Catalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://catalogdb:27017",
     "DatabaseName": "CatalogDb",
     "CollectionName": "Products"
   },
@@ -12,6 +12,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
+  }, 
   "AllowedHosts": "*"
 }
